--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
-<div class="background">
-  <span class="title">{{ title }}</span>
-  <a href="https://www.linkedin.com/in/gustavovagner/" target="_blank">
-    <img src="https://img.icons8.com/ios-glyphs/30/000000/linkedin.png" class="linkedin-logo"/>
-  </a>
+<div class="row">
+    <div class="container">
+        <div class="background">
+            <span class="title">{{ title }}</span>
+            <a href="https://www.linkedin.com/in/gustavovagner/" target="_blank">
+                <img src="../assets//linkedin.png" class="linkedin-logo" />
+            </a>
+        </div>
+    </div>
 </div>
+<my-skills></my-skills>
