--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
+<app-navbar></app-navbar>
 <div class="row">
     <div class="container">
         <div class="background">
-            <span class="title">{{ title }}</span>
-            <a href="https://www.linkedin.com/in/gustavovagner/" target="_blank">
-                <img src="../assets//linkedin.png" class="linkedin-logo" />
-            </a>
+            <span class="title">{{ title }}</span><br>
+            <span class="webDevelober">&lt;web developer/&gt;</span>
         </div>
     </div>
 </div>
