--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@ body {
 .background {    
     position: fixed;
     top: 50%;
-    left: 50%;
+    left: 25%;
     transform: translate(-50%, -50%);
 }
 
@@ -13,13 +13,6 @@ body {
     color: white;
     font-family: monospace;
     font-size: 1em;
-}
-
-.linkedin-logo {   
-    background-color: white;
-    border-radius: 7px;
-    width: 21px;
-    margin-left: 11px;    
 }
 
 .skills {
@@ -36,6 +29,11 @@ body {
     font-size: 3em;
 }
 
+.icon-navbar {
+    color: white;
+    font-size: 1.7em;
+}
+
 .javasScript {    
     background-color: #212529;
 }   
@@ -45,6 +43,12 @@ i:hover::before {
     box-shadow: 0 0 10px black;
     color: white;
     
+}
+
+.webDevelober {
+    margin-left: 6px;
+    color: #737272;
+    font-size: 0.8em;
 }
 
 @media only screen and (max-width: 600px) {
