--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,16 +1,16 @@
 <div class="skills">
     <div class="container">
         <div class="row">            
-            <div class="col-2 col-md-1 offset-md-2">
+            <div class="col-md-1 offset-md-2 col-2">
                 <app-skill name="HTML" iconClass="icon fab fa-html5"></app-skill>
             </div> 
-            <div class="col-2 col-md-1">
+            <div class="col-md-1 col-2">
                 <app-skill name="CSS" iconClass="icon fab fa-css3-alt"></app-skill>   
             </div>
-            <div class="col-2 col-md-1">
+            <div class="col-md-1 col-2">
                 <app-skill name="Sass" iconClass="icon fab fa-sass"></app-skill>                
             </div>
-            <div class="col-2 col-md-1">
+            <div class="col-md-1 col-2">
                 <app-skill name="JavaScript" iconClass="icon fab fa-js"></app-skill>                
             </div>
             <!-- <div class="col-md-1">               
@@ -18,16 +18,16 @@
                     <img class="icon javasScript" src="../../assets/typescript.svg">
                 </app-skill>
             </div> -->
-            <div class="col-2 col-md-1">
+            <div class="col-md-1 col-2">
                 <app-skill name="Angular" iconClass="icon fab fa-angular"></app-skill>                  
             </div>
-            <div class="col-2 col-md-1">
+            <div class="col-md-1 col-2">
                 <app-skill name="Bootstrap" iconClass="icon fab fa-bootstrap"></app-skill>               
             </div>
-            <div class="col-2 col-md-1">
+            <div class="col-md-1 col-2 offset-col-4">
                 <app-skill name="Sql Server" iconClass="icon fas fa-database"></app-skill>          
             </div>
-            <div class="col-2 col-md-1">
+            <div class="col-md-1 col-2">
                 <app-skill name="Git" iconClass="icon fab fa-git"></app-skill>                
             </div>
         </div> 
