adding skill icons

--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -12,12 +12,10 @@
             </div>
             <div class="col-md-1 col-2">
                 <app-skill name="JavaScript" iconClass="icon fab fa-js"></app-skill>                
+            </div>         
+            <div class="col-md-1 col-2">
+                <app-skill name="TypeScript, C# and .NET" iconClass="icon fas fa-code"></app-skill>
             </div>
-            <!-- <div class="col-md-1">               
-                <app-skill name="TypeScript">                    
-                    <img class="icon javasScript" src="../../assets/typescript.svg">
-                </app-skill>
-            </div> -->
             <div class="col-md-1 col-2">
                 <app-skill name="Angular" iconClass="icon fab fa-angular"></app-skill>                  
             </div>
@@ -29,6 +27,9 @@
             </div>
             <div class="col-md-1 col-2">
                 <app-skill name="Git" iconClass="icon fab fa-git"></app-skill>                
+            </div>
+            <div class="col-md-1 col-2">
+                <app-skill name="Tests" iconClass="icon fas fa-flask"></app-skill>                
             </div>
         </div> 
     </div>
