--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
 <div class="row">
     <div class="container">
         <div class="background">
-            <span class="title">{{ title }}</span><br>
-            <span class="webDevelober">&lt;web developer/&gt;</span>
+            <span class="title">{{ title }}</span
+            ><br />
+            <span class="webDevelober">&lt;software developer/&gt;</span>
         </div>
     </div>
 </div>
